--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,10 +1,6 @@
 name: echo on pull request opend
 
-on:
-  pull_request:
-    branches: master
-    types: [opend]
-    
+on: pull_request
 jobs:
   build:
 
