--- a/.github/workflows/echo_on_pull_request_opend.yml
+++ b/.github/workflows/echo_on_pull_request_opend.yml
@@ -1,9 +1,6 @@
 name: echo on pull request opend
 
-on: 
-  pull_request:
-    types: 
-      - opened
+on: pull_request_review_comment
 
 jobs:
   build:
