--- a/.github/workflows/echo_on_pull_request_opend.yml
+++ b/.github/workflows/echo_on_pull_request_opend.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Run a one-line script
       run: echo Hello, world!
+    - name: cat
+      run: cat $GITHUB_EVENT_PATH
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
