--- a/.github/workflows/echo_on_pull_request_opend.yml
+++ b/.github/workflows/echo_on_pull_request_opend.yml
@@ -1,6 +1,8 @@
 name: echo on pull request opend
 
-on: pull_request_review_comment
+on:
+  pull_request:
+    types: opened
 
 jobs:
   build:
@@ -11,7 +13,11 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: cat
-      run: cat $GITHUB_EVENT_PATH
+      run: |
+        if [ `cat $GITHUB_EVENT_PATH | jq ".pull_request.labels[]" -r | wc -l` -gt 0 ]; then
+          COMMENT_URL=`cat $GITHUB_EVENT_PATH | jq ".pull_request.comments_url" -r`
+          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -d "{\"body\": \"No label\"}" $COMMENT_URL
+        fi
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
